[package]
name = "ratelimit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossbeam-queue = "0.3.8"
crossbeam-skiplist = "0.1.1"
futures = "0.3.28"
pretty_assertions = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.12.1", features = ["flamegraph"] }

[[bench]]
name = "ratelimit_benchmark"
harness = false
